# palogy

./: README.md  pyproject.toml  setup.py
palogy/: __init__.py  excel_handler.py  google_sheets_handler.py  logger.py
tests/: test_excel_handler.py  test_google_sheets_handler.py  test_logger.py
